--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap" rel="stylesheet">
@@ -10,7 +10,6 @@
   
   <title>Easybank Landing Page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -19,12 +18,13 @@
 <body>
 
   <header class="header">
+    <div class="overlay"></div>
     <nav class="flex flex-jc-sb flex-ai-c">
       <a href="/" class="header__logo">
         <img src="/images/logo.svg" alt="Easybank">
       </a>
 
-      <a href="#" class="header__menu hide-for-desktop">
+      <a id='btnhamburger' href="#" class="header__menu hide-for-desktop">
         <span></span>
         <span></span>
         <span></span>
